sgd/reproduction/playground/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Academic_Group__c</fullName>
        <label>所属研究会</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_conference__c</fullName>
        <label>学会</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>応用物理学会</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>IWN</fullName>
                </value>
                <value>
                    <fullName>ISGN</fullName>
                </value>
                <value>
                    <fullName>ISPlasma</fullName>
                </value>
                <value>
                    <fullName>窒化物半導体結晶成長講演会</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_project__c</fullName>
        <label>国プロ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>戦略的イノベーション創造プログラム（SIP）/内閣府、NEDO</fullName>
                </value>
                <value>
                    <fullName>革新的研究開発推進プログラム（ImPACT）/内閣府</fullName>
                </value>
                <value>
                    <fullName>戦略的創造研究推進事業（さきがけ）</fullName>
                </value>
                <value>
                    <fullName>センター・オブ・イノベーションプログラム（COI）/文科省、JST</fullName>
                </value>
                <value>
                    <fullName>スーパークラスター/JST</fullName>
                </value>
                <value>
                    <fullName>戦略的創造研究推進事業・総括実施型研究（ERATO）</fullName>
                </value>
                <value>
                    <fullName>戦略的創造研究推進事業（CREST）/JST</fullName>
                </value>
                <value>
                    <fullName>先端的低炭素化技術開発（ALCA）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApproachCategory__c</fullName>
        <label>アプローチ状況</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stage1</fullName>
                </value>
                <value>
                    <fullName>Stage2</fullName>
                </value>
                <value>
                    <fullName>Stage3</fullName>
                </value>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approach_category__c</fullName>
        <description>優先順位のカテゴリ分けを行い状況を確認する</description>
        <inlineHelpText>【カテゴリ1】
問合せ（有望リード）
STEP1；SEMI、Non-SEMIに分ける
STEP2；SEMI⇒各担当Pass、Non-SEMI
（注目のアクション）+重点施策（VG、200mm他）に紐づく施策、企業etc、、、確認
STEP3；疎遠掘り起し
【カテゴリ2】
有望リード
STEP1；SEMI、Non-SEMIに分ける
STEP2；30日以内に顧客になった人
STEP3；（直近）オフラインイベント、セミナへの参加
【カテゴリ3】上記に当てはまらない
【カテゴリ4】不要</inlineHelpText>
        <label>アプローチカテゴリ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>カテゴリ1</fullName>
                </value>
                <value>
                    <fullName>カテゴリ2</fullName>
                </value>
                <value>
                    <fullName>カテゴリ3</fullName>
                </value>
                <value>
                    <fullName>カテゴリ4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approach_status__c</fullName>
        <description>アプローチの状況を確認します。</description>
        <inlineHelpText>□有望リード
Stage1；当日　つながる　つながらない
Stage2；2日目　つながる　つながらない　つながらない理由；外出⇒メール　業種別資料提案etc（テンプレート用意）
⇒営業へ送客かFollow
Stage3；3日目　メール閲覧⇒コール　つながらない
リサイクルへ回す場合
□つながる⇒リサイクル
Scoreは0に戻す⇒WebリンクClick10回⇒有望リードへ
□つながらない⇒リサイクル 
Scoreは0に戻す⇒認知（反応あり）1ヶ月に1回その人がどうしているかを定例会で振返る</inlineHelpText>
        <label>アプローチ状況</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stage1</fullName>
                </value>
                <value>
                    <fullName>Stage2</fullName>
                </value>
                <value>
                    <fullName>Stage3</fullName>
                </value>
                <value>
                    <fullName>Follow</fullName>
                </value>
                <value>
                    <fullName>Follow(営業送客)</fullName>
                </value>
                <value>
                    <fullName>代理店</fullName>
                    <label>代理店（問合せ）</label>
                </value>
                <value>
                    <fullName>代理店（有望リード）</fullName>
                </value>
                <value>
                    <fullName>営業送客</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>不適格</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargeProcess__c</fullName>
        <label>担当ﾌﾟﾛｾｽ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Diff</fullName>
                </value>
                <value>
                    <fullName>CVD</fullName>
                </value>
                <value>
                    <fullName>Etch</fullName>
                </value>
                <value>
                    <fullName>PVD</fullName>
                </value>
                <value>
                    <fullName>Impla</fullName>
                </value>
                <value>
                    <fullName>Suputter</fullName>
                </value>
                <value>
                    <fullName>Asher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cooporate_Group__c</fullName>
        <label>共同研究企業</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gyosyu__c</fullName>
        <label>分野</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IC-SEMI</fullName>
                </value>
                <value>
                    <fullName>Non-IC-SEMI</fullName>
                </value>
                <value>
                    <fullName>コーティング</fullName>
                </value>
                <value>
                    <fullName>バイオ</fullName>
                </value>
                <value>
                    <fullName>医療</fullName>
                </value>
                <value>
                    <fullName>製薬・化粧品</fullName>
                </value>
                <value>
                    <fullName>食品</fullName>
                </value>
                <value>
                    <fullName>燃料電池</fullName>
                </value>
                <value>
                    <fullName>二次電池</fullName>
                </value>
                <value>
                    <fullName>新素材・繊維</fullName>
                </value>
                <value>
                    <fullName>自動車</fullName>
                </value>
                <value>
                    <fullName>環境</fullName>
                </value>
                <value>
                    <fullName>電機部品</fullName>
                </value>
                <value>
                    <fullName>化学</fullName>
                </value>
                <value>
                    <fullName>ファイバ</fullName>
                </value>
                <value>
                    <fullName>材料</fullName>
                </value>
                <value>
                    <fullName>機械部品</fullName>
                </value>
                <value>
                    <fullName>熱・真空炉</fullName>
                </value>
                <value>
                    <fullName>販社</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>大学・官公庁</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insight__c</fullName>
        <label>関心事</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>使い方/取説</fullName>
                </value>
                <value>
                    <fullName>メンテナンス</fullName>
                </value>
                <value>
                    <fullName>資料請求</fullName>
                </value>
                <value>
                    <fullName>該非判定</fullName>
                </value>
                <value>
                    <fullName>窓口確認</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeymanInfo2__c</fullName>
        <inlineHelpText>キーマンの補足情報欄です。</inlineHelpText>
        <label>キーマン補足情報</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keyman__c</fullName>
        <defaultValue>false</defaultValue>
        <label>キーマン</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketoFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MarketoFlg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Naisen__c</fullName>
        <label>内線</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NotifiedToMarketoFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifiedToMarketoFlg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldLocationOwner__c</fullName>
        <description>旧環境から新環境へのデータ移行の際に所有者が割り当てられず、所有者を田中様に設定した際に、旧環境の所有者名を格納する</description>
        <label>旧環境所有者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherComment__c</fullName>
        <label>趣味・嗜好・その他</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reasonofrecycle__c</fullName>
        <label>リサイクル理由</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                    <label>値段</label>
                </value>
                <value>
                    <fullName>時期</fullName>
                </value>
                <value>
                    <fullName>製品性能</fullName>
                </value>
                <value>
                    <fullName>営業フォロー済</fullName>
                </value>
                <value>
                    <fullName>タイミング</fullName>
                </value>
                <value>
                    <fullName>情報収集</fullName>
                </value>
                <value>
                    <fullName>Gr製品</fullName>
                </value>
                <value>
                    <fullName>問合せのみ</fullName>
                </value>
                <value>
                    <fullName>見積済/発注済</fullName>
                </value>
                <value>
                    <fullName>連絡不可</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardFreehandmemo__c</fullName>
        <label>名刺手書きメモ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardListName__c</fullName>
        <inlineHelpText>名刺から取り込んだ時のリスト名</inlineHelpText>
        <label>名刺リスト名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardMemo__c</fullName>
        <label>名刺メモ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>名刺</label>
        <referenceTo>SmartViscaf__NameCard__c</referenceTo>
        <relationshipLabel>取引先責任者</relationshipLabel>
        <relationshipName>ContactNameCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>follow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>フォロー</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>マルケト連携用項目</description>
        <label>取得日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>マルケト連携用項目</description>
        <label>新規顧客獲得プログラム</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>マルケト連携用項目</description>
        <label>リードのスコア</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <label>Original Source Info（参照元のソース情報）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <description>マルケト連携用項目</description>
        <label>Original Source Type（参照元のソースのタイプ）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Contact&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Mkto_Lead_Score__c</fullName>
        <label>Mkto Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relation__c</fullName>
        <label>関連先情報</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Keyman__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>すべての取引先責任者</label>
    </listViews>
    <listViews>
        <fullName>Err_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.ContactType</value>
        </filters>
        <label>得意先が登録されていない担当者</label>
        <sharedTo>
            <group>STEC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>私の取引先責任者</label>
    </listViews>
    <listViews>
        <fullName>SMAX_PS_All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SMAX_PS_Contact</value>
        </filters>
        <label>HTS　すべての取引先責任者</label>
        <sharedTo>
            <group>SMAX_PS_HTS_Other_Object_R_W</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View4</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Gyosyu__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>今週の新取引先責任者</label>
    </listViews>
    <listViews>
        <fullName>View5</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>自分の案件</label>
        <sharedTo>
            <group>STEC_Sales</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ContactType</fullName>
        <active>true</active>
        <label>得意先担当者</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMAX_PS_Contact</fullName>
        <active>true</active>
        <label>SVMX Contact</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Required_Email_or_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name=&quot;SVMX Contact&quot;,
 AND( 
  Email = null,
  Phone = null,
  MobilePhone = null
 ) 
)</errorConditionFormula>
        <errorMessage>メールもしくは電話番号を入力してください。</errorMessage>
    </validationRules>
</CustomObject>